[tool.poetry]
name = "repl_python3_turnio-integration"
version = "0.1.0"
description = ""
authors = ["Simonde9 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
phonenumbers = "^8.12.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
